fix: CSS tweaks (#2399)
This fixes a number of CSS issues:

- The copy button stays put for parsed literals as well (Closes #2160)
- Line highlighting extends for shorter lines as well
- Browser default (e.g. scrollbar colors) adjust when changing theme

--- a/src/theme-src/css/code.css
+++ b/src/theme-src/css/code.css
@@ -11,6 +11,14 @@
 	}
 }
 
+.literal-block-copy-wrapper {
+	@apply relative;
+
+	&:hover .copy {
+		@apply opacity-100;
+	}
+}
+
 .highlight-python .go,
 .highlight-pycon .go {
 	@apply select-none;
@@ -45,15 +53,11 @@ pre {
 	@apply mt-6 overflow-x-auto rounded-lg border border-border py-4 text-sm;
 
 	&.literal-block {
-		@apply relative px-4;
-
-		&:hover .copy {
-			@apply opacity-100;
-		}
+		@apply px-4;
 	}
 
 	& code {
-		@apply whitespace-pre bg-transparent p-0;
+		@apply block whitespace-pre bg-transparent p-0 min-w-fit;
 
 		& > [id^="line-"] {
 			@apply block px-4;
