--- a/src/theme-src/css/styles.css
+++ b/src/theme-src/css/styles.css
@@ -47,7 +47,7 @@
 
 @layer base {
 	:root {
-		color-scheme: light dark;
+		color-scheme: light;
 
 		--background: 0 0% 100%;
 		--foreground: 222.2 47.4% 11.2%;
@@ -75,6 +75,8 @@
 	}
 
 	:root.dark {
+		color-scheme: dark;
+
 		--background: 224 71% 0%;
 		--foreground: 213 31% 91%;
 
